--- a/config/IguanaTinkerTweaks/main.cfg
+++ b/config/IguanaTinkerTweaks/main.cfg
@@ -285,13 +285,13 @@ tweaks {
     B:disableBonusModifierModifiers=false
 
     # Makes all non-TConstruct bows useless. You suddenly forgot how to use a bow. [default: false]
-    B:disableRegularBows=false
+    B:disableRegularBows=true
 
     # Makes all non-TConstruct hoes to not be able to hoe ground. Use the Mattock. [default: false]
-    B:disableRegularHoes=false
+    B:disableRegularHoes=true
 
     # Makes all non-TConstruct swords useless. Like whacking enemies with a stick. [default: false]
-    B:disableRegularSwords=false
+    B:disableRegularSwords=true
 
     # Makes all non-TConstruct tools mine nothing [default: true]
     B:disableRegularTools=true
@@ -312,7 +312,7 @@ tweaks {
     B:easyToolRepair=true
 
     # How many gravel are required to craft one Flint [range: 1 ~ 9, default: 3]
-    I:gravelPerFlint=3
+    I:gravelPerFlint=5
 
     # Silky Cloth needs gold ingots, instead of nuggets [default: true]
     B:moreExpensiveSilkyCloth=true
@@ -333,7 +333,7 @@ tweaks {
     B:removeStoneTorchRecipe=false
 
     # Limits the amount how often a tool can be repaired. -1 means unlimited repairs, like normally. [range: -1 ~ 999, default: -1]
-    I:repairsLimit=-1
+    I:repairsLimit=15
 }
 
 
