--- a/config/IC2.ini
+++ b/config/IC2.ini
@@ -1,18 +1,18 @@
 ; ic2 general config
-; created 08.07.2015 16:56:46
+; created 12.07.2015 12:14:46
 ;---
 
 [worldgen]
 ; Enable generation of rubber trees in the world.
 rubberTree = true
 ; Enable generation of copper in the world.
-copperOre = true
+copperOre = false
 ; Enable generation of tin in the world.
-tinOre = true
+tinOre = false
 ; Enable generation of uranium in the world.
 uraniumOre = true
 ; Enable generation of Lead in the world.
-leadOre = true
+leadOre = false
 ; Factor scaling the IC2 ore generation quantity.
 oreDensityFactor = 1.0
 
